--- a/style.css
+++ b/style.css
@@ -1,27 +1,94 @@
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    background-color: #f5f5f5;
+*{
+    padding: 0;
+    margin: 0; 
+    font-family: 'Quicksand';
 }
+
+body{
+    background: linear-gradient(90deg, #C4541D 0%, #D96629 100%); 
+    max-width: 100%;
+    max-height: 100%;
+}
+
+header{
+    background: linear-gradient(180deg, #C54F1E 0%, #D45A1A 100%);
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 40px;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    width: 95%;
+}
+
+#logo{
+    width: 100%;
+}
+
+header nav ul{
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    padding-top: 20px;
+    padding-left: 350px;
+    padding-right: 310px;
+}
+
+a:hover i,
+
+a:hover span{
+    color: #ea5a00;
+}
+
+a{
+    text-decoration: none;
+    color: #f5f5f5;
+}
+
+header button{
+    padding: 15px;
+    border-radius: 18px;
+    border-color: rgba(128, 128, 128, 0.575);
+    background-color: #E97842;
+    color: #f5f5f5;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+header button:hover{
+    box-shadow: 1px 0.5px #383838d7;
+}
+
 .container {
     max-width: 800px;
     margin: auto;
+    margin-top: 100px;    
 }
+
+.container h2{
+    font-size: 40px;
+    color: #f5f5f5;
+}
+
 .filters {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 70px;
 }
+
 .filters select {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
 }
+
 .restaurant-list {
+    margin-top: 30px;
+    margin-bottom: 100px;
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* 4 colunas por linha */
-    gap: 15px; /* Espaçamento entre os cards */
+    gap: 50px; /* Espaçamento entre os cards */
     justify-content: center; /* Centraliza o grid */
 }
 
@@ -39,20 +106,97 @@ body {
     text-align: center; /* Centraliza o texto */
 }
 
+.restaurant:hover{
+    transform: translateY(-5px);
+}
+
 .restaurant img {
     width: 100%; /* Faz a imagem ocupar toda a largura do card */
     border-radius: 8px; /* Borda arredondada na imagem */
     object-fit: cover; /* Garante que a imagem preencha corretamente */
 }
-.info {
-    flex: 1;
-    margin-left: 15px;
+.info{
+    color: #C54F1E;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
 }
+
 .info h3 {
-    margin: 0;
+    padding-top: 10px;
     font-size: 18px;
 }
-.info p {
-    margin: 5px 0;
-    color: gray;
+
+.info p{
+    color: #1f1f1f;
+}
+
+h2{
+    text-align: center;
+    padding: 50px;
+}
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 40px;
+    background-color: #C4541D; 
+    gap: 20px;
+}
+
+footer #logo{
+    width: 15%;
+}
+
+.links ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 10px; 
+}
+
+.links ul li a {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    text-decoration: none;
+    color: #f5f5f5;
+}
+
+#texto2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+#texto2 h3{
+    font-size: 23px;
+    color: #f5f5f5;
+}
+
+#search2 {
+    padding: 8px;
+    width: 178px;
+    border-radius: 5px;
+    border: 1px solid #888;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.bottom-footer{
+    background-color: #C4541D;
+    padding: 20px;
+    text-align: center;
+    font-size: 14px;
+    border-top: 1px solid #2422224d;
+}
+
+#copyright{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    color: #f5f5f5;
 }
